--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,18 +18,10 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.ofb-shadow {
+  box-shadow:
+    0 10px 22px 0 rgba(0, 0, 0, 0.15),
+    0 40px 40px 0 rgba(0, 0, 0, 0.13),
+    0 90px 53px 0 rgba(0, 0, 0, 0.08),
+    0 159px 64px 0 rgba(0, 0, 0, 0.02);
 }
