--- a/app/(with-root-layout)/globals.css
+++ b/app/(with-root-layout)/globals.css
@@ -18,6 +18,15 @@
   }
 }
 
+@layer components {
+  label {
+    @apply inline-block pb-2 text-sm text-[#00000080];
+  }
+  input {
+    @apply mb-8 py-2 pl-4 text-sm focus:outline-none;
+  }
+}
+
 @layer utilities {
   .ofb-shadow {
     box-shadow:
